--- a/css/index.css
+++ b/css/index.css
@@ -447,6 +447,67 @@
 }
 
 
+@font-face {
+    font-family: 'Open Sans';
+    src: local('Open Sans Light'), local('OpenSans-Light'), url(.././fonts/opensanslight.woff2) format('woff2'), url(.././fonts/opensanslight.woff) format('woff'), url(.././fonts/opensanslight.ttf) format('truetype');
+    font-weight: 300;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Open Sans';
+    src: local('Open Sans Light Italic'), local('OpenSansLight-Italic'), url(.././fonts/opensanslightitalic.woff2) format('woff2'), url(.././fonts/opensanslightitalic.woff) format('woff'), url(.././fonts/opensanslightitalic.ttf) format('truetype');
+    font-weight: 300;
+    font-style: italic;
+}
+@font-face {
+    font-family: 'Open Sans';
+    src: local('Open Sans'), local('OpenSans'), url(.././fonts/opensans.woff2) format('woff2'), url(.././fonts/opensans.woff) format('woff'), url(.././fonts/opensans.ttf) format('truetype');
+    font-weight: 400;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Open Sans';
+    src: local('Open Sans Italic'), local('OpenSans-Italic'), url(.././fonts/opensansitalic.woff2) format('woff2'), url(.././fonts/opensansitalic.woff) format('woff'), url(.././fonts/opensansitalic.ttf) format('truetype');
+    font-weight: 400;
+    font-style: italic;
+}
+@font-face {
+    font-family: 'Open Sans';
+    src: local('Open Sans Semibold'), local('OpenSans-Semibold'), url(.././fonts/opensanssemibold.woff2) format('woff2'), url(.././fonts/opensanssemibold.woff) format('woff'), url(.././fonts/opensanssemibold.ttf) format('truetype');
+    font-weight: 600;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Open Sans';
+    src: local('Open Sans Semibold Italic'), local('OpenSans-SemiboldItalic'), url(.././fonts/opensanssemibolditalic.woff2) format('woff2'), url(.././fonts/opensanssemibolditalic.woff) format('woff'), url(.././fonts/opensanssemibolditalic.ttf) format('truetype');
+    font-weight: 600;
+    font-style: italic;
+}
+@font-face {
+    font-family: 'Open Sans';
+    src: local('Open Sans Bold'), local('OpenSans-Bold'), url(.././fonts/opensansbold.woff2) format('woff2'), url(.././fonts/opensansbold.woff) format('woff'), url(.././fonts/opensansbold.ttf) format('truetype');
+    font-weight: 700;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Open Sans';
+    src: local('Open Sans Bold Italic'), local('OpenSans-BoldItalic'), url(.././fonts/opensansbolditalic.woff2) format('woff2'), url(.././fonts/opensansbolditalic.woff) format('woff'), url(.././fonts/opensansbolditalic.ttf) format('truetype');
+    font-weight: 700;
+    font-style: italic;
+}
+@font-face {
+    font-family: 'Open Sans';
+    src: local('Open Sans Extrabold'), local('OpenSans-Extrabold'), url(.././fonts/opensansextrabold.woff2) format('woff2'), url(.././fonts/opensansextrabold.woff) format('woff'), url(.././fonts/opensansextrabold.ttf) format('truetype');
+    font-weight: 800;
+    font-style: normal;
+}
+@font-face {
+    font-family: 'Open Sans';
+    src: local('Open Sans Extrabold Italic'), local('OpenSans-ExtraboldItalic'), url(.././fonts/opensansextrabolditalic.woff2) format('woff2'), url(.././fonts/opensansextrabolditalic.woff) format('woff'), url(.././fonts/opensansextrabolditalic.ttf) format('truetype');
+    font-weight: 800;
+    font-style: italic;
+}
+
 
 
 .material-icons{font-family:'Material Icons';font-weight:normal;font-style:normal;font-size:24px;line-height:1;text-transform:none;letter-spacing:normal;word-wrap:normal;white-space:nowrap;direction:ltr;-webkit-font-smoothing:antialiased;text-rendering:optimizeLegibility;-moz-osx-font-smoothing:grayscale;font-feature-settings:'liga'}.purple-gradient{background:linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%)}.green-gradient{background:linear-gradient(180deg, #6FCF97 0%, #66D2EA 100%)}.yellow-gradient{background:linear-gradient(180deg, #FFE39C 0%, #FFBA9C 100%)}.black-gradient{background:linear-gradient(180deg, #919191 0%, #3D4975 100%)}.label{padding:0;margin:0;display:grid;grid-row-gap:5px;grid-template-columns:1fr}.label__title{font-family:Montserrat;font-style:normal;font-weight:bold;font-size:12px;line-height:15px;color:#1f2041;text-transform:uppercase;letter-spacing:-0.15px;padding:0;margin:0}.label__header{display:flex;margin:0;padding:0;justify-content:space-between}.label__comment{font-family:Montserrat;font-style:normal;font-weight:bold;font-size:12px;line-height:15px;color:#1f2041;text-transform:uppercase;letter-spacing:-0.15px;color:rgba(31,32,65,0.5);margin:0;padding:0;font-weight:normal}.index a{line-height:1cm;font-size:0.6cm}
